--- a/index.html
+++ b/index.html
@@ -27,8 +27,12 @@
       <div class="card">
         <div class="myBalance">
           <div class="myBalance__totalGrpTop">
+            <div class="myBalance__miniTitleTop">Month Total Start</div>
+            <div class="myBalance__monthTotalTop"></div>
+          </div>
+          <div class="myBalance__totalGrpTop">
             <div class="myBalance__miniTitleTop">My balance</div>
-            <div class="myBalance__totalTop">$921.48</div>
+            <div class="myBalance__totalTop"></div>
           </div>
           <div class="myBalance__circles">
             <div class="myBalance__whiteCircle"></div>
@@ -77,7 +81,7 @@
           <hr/>
           <div class="bottomRow">
             <div class="bottomRow__totalGrpBottom">
-              <div class="bottomRow__miniTitleBottom">Total this month</div>
+              <div class="bottomRow__miniTitleBottom">Total spent this month</div>
               <div class="bottomRow__totalBottom">$478.33</div>
             </div>
             <div class="percentageGrp">
